--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,469 @@
-/* Start Global Rules */
+/* Start global rules */
+body{
+    font-family: 'Roboto', sans-serif;
+}
+a:hover{
+    color: initial !important;
+}
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-:root {
-  /* --main-color: #6138e1;
-    --main-color-alt: #1787e0; */
-  --min-btn-color: #34a5e4;
-  --main-transition: 0.3s;
+/* End global rules */
+/* Start navbar */
+.navbar{
+    background-color: transparent;
 }
-html {
-  scroll-behavior: smooth;
+.navbar .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
-  background-color: #f5f6f8;
-  overflow-x: hidden;
-  /* Hide horizontal scrollbar */
+.active-link{
+    color: #2196F3 !important;
+    position: relative;
 }
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+.active-link::after{
+content: "";
+position: absolute;
+width: 42px;
+height: 3px;
+border-radius: 8px;
+bottom: 0;
+right: 10px;
+border-bottom: 1px solid #2196F3;
 
-a {
-  text-decoration: none;
-  color: white;
 }
-
-.center-position {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.register{
+    width: 268px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
-.container {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.register-btn{
+    width: 125px;
+    position: relative;
+    background: #2196F3;
+    border-radius: 8px;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-/* End Global Rules */
-/* Start Media Query */
-/* Small devices */
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
+.register-btn:hover{
+    color: white !important;
 }
-
-/* Medium devices */
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
+.login{
+    font-weight: 500;
+    font-size: 16px;
+    color: #302F2F;
 }
-
-/* Large devices */
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px;
-  }
+.register-btn::after{
+    content: "";
+    position: absolute;
+    right: -29px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1px;
+    height: 80%;
+    background-color: #979797;
 }
-/* End Media Query */
-/* Start header */
+.fa-gear{
+    color:  rgba(0, 0, 0, 0.54);
+    cursor: pointer;
+}
+@media(max-width:992px){
+    .active-link::after{
+            left: 0;
+    }
+}
+/* End navbar */
+/* Start landing */
+.landing{
+    width: 100%;
+    height: 400px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.landing-content h1{
+    font-weight: 700;
+    font-size: 3rem;
+    color: rgba(0, 0, 0, 0.87);
+}
+.landing-content p{
+font-size: 1.25rem;
+line-height: 36px;
+}
 header{
     position: relative;
-    width: 100%;
-    height: 72px;
 }
-/* End header */
+header::before{
+    content: "";
+    position: absolute;
+    left: 0%;
+    width: 100%;
+    height: 650px;
+    background-color: var(--main-color);
+    z-index: -1;
+    transform: skewY(-6deg);
+    transform-origin: top left;
+    background-color: #EBF6FE;
+}
+.landing img{
+    max-width: 500px;
+}
+.whatsapp-btn{
+    width: 180px;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+    background-color: #45BF54;
+    color: white;
+    box-shadow: 0px 3px 24px 4px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+}
+.whatsapp-btn:hover{
+    color: white !important;
+    cursor: pointer;
+}
+.whatsapp-btn p{
+    line-height: 0;
+    margin: 0;
+}
+.whatsapp-btn svg{
+    font-size: 30px;
+}
+@media (max-width:992px){
+    .landing{
+        flex-direction: column;
+    }
+}
+@media (max-width:576px){
+    .landing-content h1{
+        font-size: 2rem;
+    }
+    .landing img{
+    max-width: 350px;
+    margin-top: 50px;
+}
+.landing{
+    margin-top: 50px;
+}
+}
+/* End landing */
+/* Start features */
+.features{
+    margin-top: 150px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 1% 1%;
+}
+.features div{
+    width: 350px;
+    height: 100px;
+    box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+    background-color: white;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 10px auto;
+}
+.features div svg{
+        color: #10cab7;
+    font-size: 2em;
+}
+.features div p{
+    margin: 0;
+}
+/* End features */
+/* Start About us */
+.about-us{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 100px;
+}
+.about-us-content>:first-child{
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 42px;
+    color: rgba(0, 0, 0, 0.87);
+}
+.about-us-img{
+    width: 350px;
+    height: 350px;
+    position: relative;
+}
+.about-us-img::after{
+    content: "";
+    position: absolute;
+    left: 100px;
+    width:100%;
+    height: 100%;
+    background-color: #2196F3;
+    opacity: 0.1;
+    border-radius: 60px;
+    transform: rotate(45deg);
+    z-index: -1;
+}
+.about-us-img::before{
+    content: "";
+    position: absolute;
+    left: 25%;
+    top: -5%;
+    width:140px;
+    height:140px;
+    background: #2196F3;
+    opacity: 0.1;
+    mix-blend-mode: normal;
+    /* opacity: 0.1; */
+    border-radius: 12px;
+    transform: rotate(45deg);
+    z-index: 9999;
+}
+.shape1{
+    width: 200px;
+    height:200px;
+    background: #2196F3;
+    border-radius: 32px;
+    transform: rotate(45deg);
+    position: absolute;
+    top: 80px;
+}
+.shape1 p{
+    text-align: end;
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+    transform: rotate(-45deg);
+}
+.shape2{
+    width: 150px;
+    height: 150px;
+    background-image: url(../images/one.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    border-radius: 32px;
+    position: absolute;
+    right: -150px;
+    top: -50px;
+    /* clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%); */
+}
+.shape3{
+    width: 150px;
+    height: 150px;
+    background-image: url(../images/two.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    border-radius: 32px;
+    position: absolute;
+    right: -150px;
+    top: 250px;
+}
+@media (max-width:992px){
+    .about-us{
+        flex-direction: column-reverse;    
+        justify-content: center;
+        align-items: center;
+    }
+    .about-us-img{
+    width: 200px;
+    height: 200px;
+    margin-right:150px;
+}
+.about-us-img::before{
+    width: 90px;
+    height: 90px;
+    left: 40%;
+}
+.shape1{
+    width: 130px;
+    height: 130px;
+    top: 115px;
+}
+.shape3{
+top: 115px;
+}
+.shape1 p{
+    font-size: 25px;
+}
+.shape2,.shape3{
+    width: 100px;
+    height: 100px;
+}
+.about-us-content{
+    margin-top: 100px !important;
+    margin: 20px auto;
+}
+}
+/* End About us */
+
+/* Start Our-Service */
+.Our-Service{
+    width: 100%;
+    margin-top: 150px;
+    height: auto;
+    position: relative;
+    
+}
+.Our-Service .container{
+        padding: 2rem 0rem;
+}
+.Our-Service::before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height:100%;
+    background-color: #2196F3;
+    opacity: 0.1;
+}
+.Our-Service-content h1{
+    color: #2196F3;
+    padding-bottom: 1rem;
+}
+/* Start Swiper */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+.slide-container{
+  max-width: 1120px;
+  width: 100%;
+  padding: 40px 0;
+}
+.slide-content{
+  margin: 0 40px;
+  overflow: hidden;
+  border-radius: 25px;
+}
+.card{
+  border-radius: 25px;
+  background-color: #FFF;
+}
+.image-content,
+.card-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 14px;
+}
+.image-content{
+  position: relative;
+  row-gap: 5px;
+  padding: 25px 0;
+}
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #4070F4;
+  border-radius: 25px 25px 0 25px;
+}
+.overlay::before,
+.overlay::after{
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: -40px;
+  height: 40px;
+  width: 40px;
+  background-color: #4070F4;
+}
+.overlay::after{
+  border-radius: 0 25px 0 0;
+  background-color: #FFF;
+}
+.card-image{
+  position: relative;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background: #FFF;
+  padding: 3px;
+}
+.card-image .card-img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 4px solid #4070F4;
+}
+.name{
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+}
+.description{
+  font-size: 14px;
+  color: #707070;
+  text-align: center;
+}
+.button{
+  border: none;
+  font-size: 16px;
+  color: #FFF;
+  padding: 8px 16px;
+  background-color: #4070F4;
+  border-radius: 6px;
+  margin: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button:hover{
+  background: #265DF2;
+}
+
+.swiper-navBtn{
+  color: #6E93f7;
+  transition: color 0.3s ease;
+}
+.swiper-navBtn:hover{
+  color: #4070F4;
+}
+.swiper-navBtn::before,
+.swiper-navBtn::after{
+  font-size: 35px;
+}
+.swiper-button-next{
+  right: 0;
+}
+.swiper-button-prev{
+  left: 0;
+}
+.swiper-pagination-bullet{
+  background-color: #6E93f7;
+  opacity: 1;
+}
+.swiper-pagination-bullet-active{
+  background-color: #4070F4;
+}
+@media screen and (max-width: 768px) {
+  .slide-content{
+    margin: 0 10px;
+  }
+  .swiper-navBtn{
+    display: none;
+  }
+  .Our-Service-content h1{
+    text-align: center;
+    font-size: 2.5rem;
+  }
+  .swiper-button-next:after, .swiper-button-prev:after{
+    color: white;
+  }
+}
+/* End Swiper */
