--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ top: 115px;
 /* End About us */
 
 /* Start Our-Service */
-.Our-Service{
+.Our-Service,.Comments{
     width: 100%;
     margin-top: 150px;
     height: auto;
@@ -327,17 +327,11 @@ top: 115px;
     background-color: #2196F3;
     opacity: 0.1;
 }
-.Our-Service-content h1{
+.Our-Service-content h1,.Comments-content h1{
     color: #2196F3;
     padding-bottom: 1rem;
 }
 /* Start Swiper */
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
 .slide-container{
   max-width: 1120px;
   width: 100%;
@@ -389,8 +383,8 @@ top: 115px;
 }
 .card-image{
   position: relative;
-  height: 150px;
-  width: 150px;
+  height: 270px;
+  width: 270px;
   border-radius: 50%;
   background: #FFF;
   padding: 3px;
@@ -451,6 +445,13 @@ top: 115px;
 .swiper-pagination-bullet-active{
   background-color: #4070F4;
 }
+.swiper-pagination1{
+visibility: hidden;
+}
+.card {
+  border-radius:25px !important;
+  height: 285px;
+}
 @media screen and (max-width: 768px) {
   .slide-content{
     margin: 0 10px;
@@ -467,3 +468,178 @@ top: 115px;
   }
 }
 /* End Swiper */
+/*Start Comments */
+.Comments .card-image{
+  width: 75px;
+  height: 75px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center ;
+  background: transparent;
+}
+/* .Comments .card-image::after{
+content: "";
+width: 100%;
+height: 100%;
+transform: scale(1.1);
+position: absolute;
+left: 50%;
+top: 50%;
+transform: translate(-50%,-50%);
+background-color: #45BF54;
+border-radius:50%;
+
+}
+.card-img{
+  z-index: 9999;
+} */
+.testimonials-card-1,
+.testimonials-card-2,
+.testimonials-card-3 {
+  width: 300px;
+  height:200px;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  /* text-align: center; */
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
+    rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  padding: 10px;
+  position: relative;
+  margin: 20px auto;
+  margin-top: 45px;
+}
+.testimonials-card-1::before,
+.testimonials-card-2::before,
+.testimonials-card-3::before {
+  content: "";
+  position: absolute;
+  width: 77px;
+  height: 77px;
+  border-radius: 50%;
+  z-index: 1;
+  top: -38.5px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: drop-shadow(0px 30px 70px rgba(41, 33, 74, 0.1));
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
+    rgba(0, 0, 0, 0.05) 0px 5px 10px;
+}
+.testimonials-card-1::before {
+  background-image: url(../images/male-1.jpg);
+}
+.testimonials-card-2::before {
+  background-image: url(../images/male-2.jpg);
+}.testimonials-card-3::before {
+  background-image: url(../images/male-3.jpg);
+}
+.rating{
+  position: relative;
+}
+@media (max-width:767px){
+  .Comments-content h1{
+    text-align: center;
+  }
+}
+/* End Comments */
+
+/* Start Social Media Icons*/
+
+.Social-Media-Icons{
+  margin-top: 100px;
+  width: 100%;
+  height: 250px;
+  position: relative;
+}
+.Social-Media-Icons h1{
+  font-size: 23px;
+  color: #265DF2;
+  text-align: center;
+  /* font-weight: bold; */
+}
+.Social-Media-Icons ul {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  margin:0;
+  padding:0;
+  display:flex;
+}
+
+ul li {
+  list-style: none;
+}
+
+ul li a {
+  position: relative;
+  width:80px;
+  height:80px;
+  display:block;
+  text-align:center;
+  margin:0 10px;
+  border-radius: 50%;
+  padding: 6px;
+  box-sizing: border-box;
+  text-decoration:none;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+  background: linear-gradient(0deg, #ddd, #fff);
+  transition: .5s;
+}
+
+ul li a:hover {
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  text-decoration:none;
+}
+
+ul li a > svg {
+  width: 100%;
+  height:100%;
+  display:block;
+  /* background: linear-gradient(0deg, #fff, #ddd); */
+  border-radius: 50%;
+  line-height: calc(60px - 12px);
+  font-size:40px;
+  color: #262626;
+  transition: .5s;
+  position: relative;
+  top: 20%;
+}
+
+ul li:nth-child(1) a svg {
+  color: #45BF54;
+}
+
+ul li:nth-child(2) a svg {
+  color: red;
+}
+
+ul li:nth-child(3) a svg{
+  color: #dd4b39;
+}
+
+/* End Social Media Icons*/
+
+/* Start Contact Us */
+.ftco-section a{
+  color: white !important;
+  text-decoration: none;
+}
+.info-wrap .dbox .icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+}
+.info-wrap .dbox{
+  color: white;
+}
+.heading-section{
+  color: #265DF2;
+}
+/* End Contact Us */
